--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav class="navbar">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="bcom.html">B.Com</a>
+  <a href="ca.html">CA</a>
+</nav>
 
   <header>
     <h1>Commerce Career Roadmap</h1>
