--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <a href="bcom.html">B.Com</a>
   <a href="ca.html">CA</a>
 </nav>
+  <div class="navbar">
+  <a href="index.html">Home</a>
+  <a href="bcom.html">B.Com</a>
+  <a href="ca.html">CA</a>
+</div>
 
   <header>
     <h1>Commerce Career Roadmap</h1>
