--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <a href="about.html">About</a>
   <a href="bcom.html">B.Com</a>
   <a href="ca.html">CA</a>
+  </nav>
 
   <header>
     <h1>Commerce Career Roadmap</h1>
