--- a/bcom.html
+++ b/bcom.html
@@ -8,20 +8,73 @@
 <body>
 
 <nav class="navbar">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="bcom.html">B.Com</a>
-  <a href="ca.html">CA</a>
+  <div class="nav-container">
+    <a class="logo" href="index.html">Commerce Roadmap</a>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="bcom.html">B.Com</a>
+      <a href="ca.html">CA</a>
+    </div>
+  </div>
 </nav>
 
-<h1>B.Com Roadmap</h1>
+<header>
+  <h1>B.Com Career Roadmap</h1>
+  <p>What to learn, when to learn, and where to learn it for free</p>
+</header>
 
-<ul>
-  <li>Accounting Fundamentals</li>
-  <li>Business Law</li>
-  <li>Taxation Basics</li>
-  <li>Excel & Financial Analysis</li>
-</ul>
+<div class="container">
+
+  <section class="roadmap-phase">
+    <h2>Phase 1: Core Foundation</h2>
+    <ul>
+      <li>Financial Accounting</li>
+      <li>Business Economics</li>
+      <li>Business Law (Basics)</li>
+      <li>Excel Fundamentals</li>
+    </ul>
+    <ul class="resources">
+      <li>Khan Academy – Accounting</li>
+      <li>NPTEL – Business Economics</li>
+      <li>ExcelIsFun (YouTube)</li>
+    </ul>
+  </section>
+
+  <section class="roadmap-phase">
+    <h2>Phase 2: Skill Building</h2>
+    <ul>
+      <li>Cost & Management Accounting</li>
+      <li>GST & Income Tax Basics</li>
+      <li>Advanced Excel</li>
+      <li>Communication Skills</li>
+    </ul>
+    <ul class="resources">
+      <li>ClearTax YouTube</li>
+      <li>Leila Gharani – Excel</li>
+      <li>Coursera (Audit Free)</li>
+    </ul>
+  </section>
+
+  <section class="roadmap-phase">
+    <h2>Phase 3: Career Direction</h2>
+    <ul>
+      <li>CA / CMA / MBA Preparation</li>
+      <li>Entry-level Accounting Jobs</li>
+      <li>Resume & Interview Prep</li>
+    </ul>
+    <ul class="resources">
+      <li>Investopedia</li>
+      <li>Harvard Resume Guide</li>
+      <li>Microsoft Learn – Power BI</li>
+    </ul>
+  </section>
+
+</div>
+
+<footer>
+  <p>Built for commerce students</p>
+</footer>
 
 </body>
 </html>
