--- a/ca.html
+++ b/ca.html
@@ -2,65 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CA Roadmap | Commerce Career Guide</title>
+  <title>CA Roadmap</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="bcom.html">B.Com</a>
-    <a href="ca.html">CA</a>
+<nav class="navbar">
+  <div class="nav-container">
+    <a class="logo" href="index.html">Commerce Roadmap</a>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="bcom.html">B.Com</a>
+      <a href="ca.html">CA</a>
+    </div>
   </div>
+</nav>
 
-  <section class="card">
-    <h1>Chartered Accountant (CA) Roadmap</h1>
-    <p>The CA course is divided into three stages. Each stage demands different skills and discipline.</p>
-  </section>
+<header>
+  <h1>CA Career Roadmap</h1>
+  <p>A clear, realistic path from Foundation to Final</p>
+</header>
 
-  <section class="card">
-    <h2>Stage 1: CA Foundation</h2>
+<div class="container">
+
+  <section class="roadmap-phase">
+    <h2>Step 1: CA Foundation</h2>
     <ul>
-      <li>Accounting Basics</li>
-      <li>Business Laws</li>
-      <li>Mathematics & Logical Reasoning</li>
+      <li>Accounting</li>
+      <li>Business Law</li>
       <li>Economics</li>
-      <li>Time management & exam strategy</li>
+      <li>Quantitative Aptitude</li>
+    </ul>
+    <ul class="resources">
+      <li>CA Amit Bachhawat</li>
+      <li>CA Shantam Gupta</li>
+      <li>Nitin Guru</li>
     </ul>
   </section>
 
-  <section class="card">
-    <h2>Stage 2: CA Intermediate</h2>
+  <section class="roadmap-phase">
+    <h2>Step 2: CA Intermediate</h2>
     <ul>
-      <li>Advanced Accounting</li>
-      <li>Corporate & Other Laws</li>
-      <li>Cost & Management Accounting</li>
-      <li>Taxation (GST + Income Tax)</li>
-      <li>Practical problem-solving</li>
+      <li>Accounting & Advanced Accounting</li>
+      <li>Costing & FM</li>
+      <li>Audit & Taxation</li>
+    </ul>
+    <ul class="resources">
+      <li>CA Parag Gupta</li>
+      <li>CA Surbhi Bansal</li>
+      <li>Unacademy Free Classes</li>
     </ul>
   </section>
 
-  <section class="card">
-    <h2>Stage 3: CA Final</h2>
+  <section class="roadmap-phase">
+    <h2>Step 3: Articleship</h2>
     <ul>
-      <li>Financial Reporting</li>
-      <li>Strategic Financial Management</li>
-      <li>Audit & Professional Ethics</li>
-      <li>Direct & International Taxation</li>
-      <li>Decision-making under pressure</li>
+      <li>Audit & Tax Exposure</li>
+      <li>Client Handling</li>
+      <li>Excel & Documentation</li>
+    </ul>
+    <ul class="resources">
+      <li>TaxGuru</li>
+      <li>ExcelIsFun</li>
     </ul>
   </section>
 
-  <section class="card">
-    <h2>Is CA Right for You?</h2>
-    <ol>
-      <li>Can you study consistently for 2–3 years?</li>
-      <li>Are you okay with delayed rewards?</li>
-      <li>Do you handle failure without quitting?</li>
-      <li>Can you stay disciplined without motivation?</li>
-    </ol>
-    <p>If most answers are “yes”, CA fits you.</p>
+  <section class="roadmap-phase">
+    <h2>Step 4: CA Final</h2>
+    <ul>
+      <li>FR & SFM</li>
+      <li>Direct & Indirect Tax</li>
+      <li>Case Study Practice</li>
+    </ul>
+    <ul class="resources">
+      <li>ICAI BOS Portal</li>
+      <li>ICAI Study Material</li>
+    </ul>
   </section>
+
+</div>
+
+<footer>
+  <p>Built for serious CA aspirants</p>
+</footer>
 
 </body>
 </html>
