--- a/bcom.html
+++ b/bcom.html
@@ -3,78 +3,85 @@
 <head>
   <meta charset="UTF-8">
   <title>B.Com Roadmap</title>
+  <meta name="description" content="Complete B.Com roadmap with skills, free resources, and career guidance for commerce students.">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav class="navbar">
-  <div class="nav-container">
-    <a class="logo" href="index.html">Commerce Roadmap</a>
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="bcom.html">B.Com</a>
-      <a href="ca.html">CA</a>
-    </div>
-  </div>
-</nav>
+  <!-- NAVBAR -->
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="bcom.html">B.Com</a>
+    <a href="ca.html">CA</a>
+  </nav>
 
-<header>
-  <h1>B.Com Career Roadmap</h1>
-  <p>What to learn, when to learn, and where to learn it for free</p>
-</header>
+  <!-- PAGE HEADER -->
+  <header>
+    <h1>B.Com Career Roadmap</h1>
+    <p>A step-by-step guide to skills, careers, and smart choices during B.Com.</p>
+  </header>
 
-<div class="container">
-
-  <section class="roadmap-phase">
-    <h2>Phase 1: Core Foundation</h2>
+  <!-- WHO IS THIS FOR -->
+  <section class="course">
+    <h2>Who Should Choose B.Com?</h2>
     <ul>
-      <li>Financial Accounting</li>
-      <li>Business Economics</li>
-      <li>Business Law (Basics)</li>
-      <li>Excel Fundamentals</li>
-    </ul>
-    <ul class="resources">
-      <li>Khan Academy – Accounting</li>
-      <li>NPTEL – Business Economics</li>
-      <li>ExcelIsFun (YouTube)</li>
+      <li>Students interested in accounting, finance, or business</li>
+      <li>Those planning CA, MBA, or finance-related careers</li>
+      <li>Students ready to build skills alongside college</li>
     </ul>
   </section>
 
-  <section class="roadmap-phase">
-    <h2>Phase 2: Skill Building</h2>
+  <!-- ROADMAP -->
+  <section class="course">
+    <h2>B.Com Roadmap (Year-wise)</h2>
+
+    <h3>Year 1 – Foundation</h3>
     <ul>
-      <li>Cost & Management Accounting</li>
-      <li>GST & Income Tax Basics</li>
-      <li>Advanced Excel</li>
-      <li>Communication Skills</li>
+      <li>Accounting fundamentals</li>
+      <li>Business economics & law</li>
+      <li>Basic Excel</li>
     </ul>
-    <ul class="resources">
-      <li>ClearTax YouTube</li>
-      <li>Leila Gharani – Excel</li>
-      <li>Coursera (Audit Free)</li>
+
+    <h3>Year 2 – Skill Building</h3>
+    <ul>
+      <li>Advanced Excel & financial analysis</li>
+      <li>GST & taxation basics</li>
+      <li>Internships (even unpaid)</li>
+    </ul>
+
+    <h3>Year 3 – Career Direction</h3>
+    <ul>
+      <li>Decide: CA / MBA / Job / Certifications</li>
+      <li>Build projects & resume</li>
+      <li>Prepare for placements or exams</li>
     </ul>
   </section>
 
-  <section class="roadmap-phase">
-    <h2>Phase 3: Career Direction</h2>
+  <!-- FREE RESOURCES -->
+  <section class="course">
+    <h2>Best Free Resources</h2>
     <ul>
-      <li>CA / CMA / MBA Preparation</li>
-      <li>Entry-level Accounting Jobs</li>
-      <li>Resume & Interview Prep</li>
-    </ul>
-    <ul class="resources">
-      <li>Investopedia</li>
-      <li>Harvard Resume Guide</li>
-      <li>Microsoft Learn – Power BI</li>
+      <li>YouTube channels for accounting & finance</li>
+      <li>Microsoft Learn for Excel</li>
+      <li>Investopedia for finance concepts</li>
     </ul>
   </section>
 
-</div>
+  <!-- COMMON MISTAKES -->
+  <section class="course">
+    <h2>Common Mistakes to Avoid</h2>
+    <ul>
+      <li>Only studying college syllabus</li>
+      <li>Ignoring practical skills like Excel</li>
+      <li>Thinking about career only in final year</li>
+    </ul>
+  </section>
 
-<footer>
-  <p>Built for commerce students</p>
-</footer>
+  <!-- FOOTER -->
+  <footer>
+    <p>Built for commerce students</p>
+  </footer>
 
 </body>
 </html>
