--- a/bcom.html
+++ b/bcom.html
@@ -77,6 +77,87 @@
       <li>Thinking about career only in final year</li>
     </ul>
   </section>
+  <section class="course">
+  <h2>Must-Learn Skills During B.Com</h2>
+  <ul>
+    <li>Advanced Excel (Pivot tables, VLOOKUP, dashboards)</li>
+    <li>Basic Accounting Software (Tally / Busy)</li>
+    <li>Financial Statement Analysis</li>
+    <li>GST & Income Tax basics</li>
+    <li>Business Communication</li>
+    <li>Basic Data Analysis (optional but powerful)</li>
+  </ul>
+</section>
+<section class="course">
+  <h2>Career Options After B.Com</h2>
+  <ul>
+    <li>Accounts Executive</li>
+    <li>Junior Accountant</li>
+    <li>Tax Assistant</li>
+    <li>Banking & Insurance roles</li>
+    <li>Business Analyst (with extra skills)</li>
+    <li>Preparation for CA / CMA / MBA / CFA</li>
+  </ul>
+</section>
+<section class="course">
+  <h2>Estimated Salary After B.Com (India)</h2>
+  <ul>
+    <li>Fresh Graduate: ₹2 – ₹4 LPA</li>
+    <li>With Excel + Accounting Software: ₹4 – ₹6 LPA</li>
+    <li>With CA/MBA/CFA progress: ₹6 – ₹10+ LPA</li>
+  </ul>
+  <p><strong>Note:</strong> Salary depends more on skills than degree.</p>
+</section>
+<section class="course">
+  <h2>Free Learning Resources</h2>
+  <ul>
+    <li>
+      Accounting Basics – 
+      <a href="https://www.youtube.com/@AccountingStuff" target="_blank">
+        Accounting Stuff (YouTube)
+      </a>
+    </li>
+
+    <li>
+      Excel for Finance – 
+      <a href="https://learn.microsoft.com/en-us/training/excel/" target="_blank">
+        Microsoft Learn Excel
+      </a>
+    </li>
+
+    <li>
+      Finance Concepts – 
+      <a href="https://www.investopedia.com" target="_blank">
+        Investopedia
+      </a>
+    </li>
+
+    <li>
+      GST & Tax Basics – 
+      <a href="https://www.youtube.com/@CAClubIndia" target="_blank">
+        CAclubindia (YouTube)
+      </a>
+    </li>
+  </ul>
+</section>
+<section class="course">
+  <h2>Long-Term Benefits of B.Com</h2>
+  <ul>
+    <li>Strong base for CA, MBA, CMA, CFA</li>
+    <li>Understanding of business & money</li>
+    <li>Flexibility to shift into finance, analytics, or management</li>
+    <li>Early earning opportunities through internships</li>
+  </ul>
+</section>
+<section class="course">
+  <h2>What Most B.Com Students Do Wrong</h2>
+  <ul>
+    <li>Only depending on college syllabus</li>
+    <li>Ignoring internships</li>
+    <li>Postponing career decisions till final year</li>
+    <li>Believing degree alone guarantees success</li>
+  </ul>
+</section>
 
   <!-- FOOTER -->
   <footer>
