--- a/bcom.html
+++ b/bcom.html
@@ -119,11 +119,15 @@
     </li>
 
     <li>
-      Excel for Finance – 
-      <a href="https://learn.microsoft.com/en-us/training/excel/" target="_blank">
-        Microsoft Learn Excel
-      </a>
-    </li>
+  <a href="https://learn.microsoft.com/en-us/training/browse/?products=excel" target="_blank">
+    Microsoft Learn – Excel Training (Official)
+  </a>
+</li>
+    <li>
+  <a href="https://www.youtube.com/playlist?list=PLrRPvpgDmw0k_J6J3xA5YxR3XvKZ1F7iD" target="_blank">
+    Excel for Beginners – Free YouTube Playlist
+  </a>
+</li>
 
     <li>
       Finance Concepts – 
