--- a/bcom.html
+++ b/bcom.html
@@ -124,8 +124,13 @@
   </a>
 </li>
     <li>
-  <a href="https://www.youtube.com/playlist?list=PLrRPvpgDmw0k_J6J3xA5YxR3XvKZ1F7iD" target="_blank">
-    Excel for Beginners – Free YouTube Playlist
+  <a href="https://www.youtube.com/results?search_query=excel+for+beginners" target="_blank">
+    Excel for Beginners – Free YouTube Tutorials
+  </a>
+</li>
+<li>
+  <a href="https://www.youtube.com/@LeilaGharani" target="_blank">
+    Leila Gharani – Excel & Data Skills (YouTube)
   </a>
 </li>
 
