--- a/bcom.html
+++ b/bcom.html
@@ -98,14 +98,25 @@
     <li>Business Analyst (with extra skills)</li>
     <li>Preparation for CA / CMA / MBA / CFA</li>
   </ul>
+  <h2>📈 Future Growth & Reality Check</h2>
+<p>
+B.Com alone gives limited growth. Real career progress happens only when you combine it with
+professional courses or practical skills.
+</p>
+
+<ul>
+  <li>B.Com + MBA → Management & leadership roles</li>
+  <li>B.Com + CA / CMA → High-paying finance roles</li>
+  <li>B.Com + Data / Finance skills → Corporate & analyst roles</li>
+</ul>
 </section>
 <section class="course">
-  <h2>Estimated Salary After B.Com (India)</h2>
-  <ul>
-    <li>Fresh Graduate: ₹2 – ₹4 LPA</li>
-    <li>With Excel + Accounting Software: ₹4 – ₹6 LPA</li>
-    <li>With CA/MBA/CFA progress: ₹6 – ₹10+ LPA</li>
-  </ul>
+  <h2>💰 Salary Progression (Reality)</h2>
+<ul>
+  <li>Fresh Graduate: ₹2–4 LPA</li>
+  <li>After 2–3 years + skills: ₹5–8 LPA</li>
+  <li>With MBA / CA / specialization: ₹10+ LPA</li>
+</ul>
   <p><strong>Note:</strong> Salary depends more on skills than degree.</p>
 </section>
 <section class="course">
@@ -167,6 +178,21 @@
     <li>Believing degree alone guarantees success</li>
   </ul>
 </section>
+  <h2>🤔 Should You Choose B.Com?</h2>
+
+<p><strong>Choose B.Com if:</strong></p>
+<ul>
+  <li>You are interested in finance, accounting, or business</li>
+  <li>You plan to pursue MBA, CA, CMA, or similar paths</li>
+  <li>You are willing to build skills alongside college</li>
+</ul>
+
+<p><strong>Avoid B.Com if:</strong></p>
+<ul>
+  <li>You want quick money with minimal effort</li>
+  <li>You dislike numbers or analysis</li>
+  <li>You don’t plan further specialization</li>
+</ul>
 
   <!-- FOOTER -->
   <footer>
