--- a/ca.html
+++ b/ca.html
@@ -18,70 +18,88 @@
     </div>
   </div>
 </nav>
+<section class="roadmap">
+  <h1>CA (Chartered Accountant) Career Roadmap</h1>
+  <p>
+    CA is one of the most demanding professional courses in commerce.
+    It offers high rewards, but only for students who can handle long study hours,
+    pressure, and consistency.
+  </p>
 
-<header>
-  <h1>CA Career Roadmap</h1>
-  <p>A clear, realistic path from Foundation to Final</p>
-</header>
+  <h2>📍 CA Roadmap</h2>
+  <ul>
+    <li><strong>Foundation:</strong> Accounting, Business Laws, Economics, Quantitative Aptitude</li>
+    <li><strong>Intermediate:</strong> Advanced Accounting, Taxation, Audit, Cost Management</li>
+    <li><strong>Articleship:</strong> 2 years of practical training under a CA</li>
+    <li><strong>Final:</strong> Financial Reporting, Strategic Financial Management, Audit</li>
+  </ul>
 
-<div class="container">
+  <h2>🧠 Skills Required to Succeed in CA</h2>
+  <ul>
+    <li>Strong conceptual understanding of accounting</li>
+    <li>Time management & discipline</li>
+    <li>Stress handling & consistency</li>
+    <li>Excel & basic data analysis</li>
+  </ul>
 
-  <section class="roadmap-phase">
-    <h2>Step 1: CA Foundation</h2>
-    <ul>
-      <li>Accounting</li>
-      <li>Business Law</li>
-      <li>Economics</li>
-      <li>Quantitative Aptitude</li>
-    </ul>
-    <ul class="resources">
-      <li>CA Amit Bachhawat</li>
-      <li>CA Shantam Gupta</li>
-      <li>Nitin Guru</li>
-    </ul>
-  </section>
+  <h2>💼 Career Options After CA</h2>
+  <ul>
+    <li>Corporate CA (Finance, Tax, Audit)</li>
+    <li>CA in Practice (Own firm)</li>
+    <li>Big 4 Firms (Deloitte, PwC, EY, KPMG)</li>
+    <li>Investment Banking & Consulting</li>
+  </ul>
 
-  <section class="roadmap-phase">
-    <h2>Step 2: CA Intermediate</h2>
-    <ul>
-      <li>Accounting & Advanced Accounting</li>
-      <li>Costing & FM</li>
-      <li>Audit & Taxation</li>
-    </ul>
-    <ul class="resources">
-      <li>CA Parag Gupta</li>
-      <li>CA Surbhi Bansal</li>
-      <li>Unacademy Free Classes</li>
-    </ul>
-  </section>
+  <h2>💰 Salary Progression (Reality)</h2>
+  <ul>
+    <li>Fresh CA: ₹7–10 LPA</li>
+    <li>With 3–5 years experience: ₹12–20 LPA</li>
+    <li>Senior roles / Practice: ₹25 LPA+</li>
+  </ul>
 
-  <section class="roadmap-phase">
-    <h2>Step 3: Articleship</h2>
-    <ul>
-      <li>Audit & Tax Exposure</li>
-      <li>Client Handling</li>
-      <li>Excel & Documentation</li>
-    </ul>
-    <ul class="resources">
-      <li>TaxGuru</li>
-      <li>ExcelIsFun</li>
-    </ul>
-  </section>
+  <h2>📚 Free & Reliable Resources</h2>
+  <ul>
+    <li>
+      <a href="https://www.icai.org" target="_blank">
+        ICAI Official Study Material
+      </a>
+    </li>
+    <li>
+      <a href="https://www.youtube.com/results?search_query=ca+foundation+lectures" target="_blank">
+        CA Foundation Free Lectures (YouTube)
+      </a>
+    </li>
+    <li>
+      <a href="https://www.edspira.com" target="_blank">
+        Edspira – Accounting Concepts
+      </a>
+    </li>
+  </ul>
 
-  <section class="roadmap-phase">
-    <h2>Step 4: CA Final</h2>
-    <ul>
-      <li>FR & SFM</li>
-      <li>Direct & Indirect Tax</li>
-      <li>Case Study Practice</li>
-    </ul>
-    <ul class="resources">
-      <li>ICAI BOS Portal</li>
-      <li>ICAI Study Material</li>
-    </ul>
-  </section>
+  <h2>⚠️ Common Mistakes CA Students Make</h2>
+  <ul>
+    <li>Underestimating the syllabus</li>
+    <li>Irregular study routine</li>
+    <li>Ignoring revisions and mock tests</li>
+    <li>Comparing speed with others</li>
+  </ul>
 
-</div>
+  <h2>🤔 Should You Choose CA?</h2>
+
+  <p><strong>Choose CA if:</strong></p>
+  <ul>
+    <li>You are comfortable with numbers and laws</li>
+    <li>You can study consistently for years</li>
+    <li>You want a high-responsibility career</li>
+  </ul>
+
+  <p><strong>Avoid CA if:</strong></p>
+  <ul>
+    <li>You want quick results or shortcuts</li>
+    <li>You struggle with long-term discipline</li>
+    <li>You dislike accounting or law</li>
+  </ul>
+</section>
 
 <footer>
   <p>Built for serious CA aspirants</p>
