--- a/ca.html
+++ b/ca.html
@@ -33,6 +33,23 @@
     <li><strong>Articleship:</strong> 2 years of practical training under a CA</li>
     <li><strong>Final:</strong> Financial Reporting, Strategic Financial Management, Audit</li>
   </ul>
+  <h2>📘 Giving Both Groups Together – Does It Matter?</h2>
+
+<p>
+Clearing both groups of CA Intermediate or Final together is not mandatory,
+but it sends a strong signal about discipline, consistency, and conceptual clarity.
+</p>
+
+<ul>
+  <li>Shows strong time management and pressure-handling ability</li>
+  <li>Improves chances of getting quality articleship</li>
+  <li>Increases visibility for top firms and corporates</li>
+</ul>
+
+<p>
+However, giving one group at a time is perfectly acceptable if it helps you stay consistent.
+Long-term success matters more than speed.
+</p>
 
   <h2>🧠 Skills Required to Succeed in CA</h2>
   <ul>
@@ -41,6 +58,19 @@
     <li>Stress handling & consistency</li>
     <li>Excel & basic data analysis</li>
   </ul>
+  <h2>🚀 Skills That Make a CA Stand Out</h2>
+<p>
+Passing CA makes you qualified. These skills decide how far and how fast you grow.
+</p>
+
+<ul>
+  <li><strong>Advanced Excel & Financial Modeling</strong> – mandatory for corporate roles</li>
+  <li><strong>Power BI / Data Analysis</strong> – for finance, consulting, and strategy roles</li>
+  <li><strong>Presentation & Client Communication</strong> – crucial in audits and advisory</li>
+  <li><strong>Business Understanding</strong> – beyond books, understanding how companies work</li>
+  <li><strong>Domain Focus</strong> – Audit, Tax, Finance, Valuation, or Consulting</li>
+</ul>
+
 
   <h2>💼 Career Options After CA</h2>
   <ul>
@@ -56,6 +86,23 @@
     <li>With 3–5 years experience: ₹12–20 LPA</li>
     <li>Senior roles / Practice: ₹25 LPA+</li>
   </ul>
+  <h2>🏅 CA Rank Holders – Benefits & Reality</h2>
+
+<p>
+Securing an All India Rank (AIR) in CA exams offers advantages,
+but it is not the only path to success.
+</p>
+
+<ul>
+  <li>Priority shortlisting by Big 4 and top corporates</li>
+  <li>Better articleship and first-job opportunities</li>
+  <li>Recognition within the CA community</li>
+</ul>
+
+<p>
+That said, many highly successful CAs are non-rankers.
+Skills, experience, and professional reputation matter more in the long run.
+</p>
 
   <h2>📚 Free & Reliable Resources</h2>
   <ul>
