--- a/bcom.html
+++ b/bcom.html
@@ -10,11 +10,12 @@
 
   <!-- NAVBAR -->
   <nav class="navbar">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="bcom.html">B.Com</a>
-    <a href="ca.html">CA</a>
-  </nav>
+  <a href="index.html">Home</a>
+  <a href="bcom.html">B.Com</a>
+  <a href="ca.html">CA</a>
+  <a href="mba.html">MBA</a>
+  <a href="about.html">About</a>
+</nav>
 
   <!-- PAGE HEADER -->
   <header>
