--- a/ca.html
+++ b/ca.html
@@ -8,15 +8,11 @@
 <body>
 
 <nav class="navbar">
-  <div class="nav-container">
-    <a class="logo" href="index.html">Commerce Roadmap</a>
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="bcom.html">B.Com</a>
-      <a href="ca.html">CA</a>
-    </div>
-  </div>
+  <a href="index.html">Home</a>
+  <a href="bcom.html">B.Com</a>
+  <a href="ca.html">CA</a>
+  <a href="mba.html">MBA</a>
+  <a href="about.html">About</a>
 </nav>
 <section class="roadmap">
   <h1>CA (Chartered Accountant) Career Roadmap</h1>
