--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
   <nav class="navbar">
   <a href="index.html">Home</a>
-  <a href="about.html">About</a>
   <a href="bcom.html">B.Com</a>
   <a href="ca.html">CA</a>
-  </nav>
+  <a href="mba.html">MBA</a>
+  <a href="about.html">About</a>
+</nav>
 
   <header>
     <h1>Commerce Career Roadmap</h1>
