--- a/mba.html
+++ b/mba.html
@@ -2,20 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MBA Career Roadmap | Commerce Roadmap</title>
-
-  <!-- SEO Basics -->
-  <meta name="description" content="Complete MBA roadmap with specializations, skills, career options, salary reality, and free resources for Indian students.">
-  <meta name="keywords" content="MBA roadmap, MBA skills, MBA careers, MBA salary India, MBA finance, MBA marketing">
+  <title>MBA Roadmap | Commerce Career Guide</title>
+  <meta name="description" content="A clear MBA roadmap covering specializations, skills, jobs, salaries, and free resources for commerce students.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-  <!-- NAVBAR -->
   <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="bcom.html">B.Com</a>
@@ -24,156 +17,114 @@
     <a href="about.html">About</a>
   </nav>
 
-  <!-- HEADER -->
   <header>
     <h1>MBA Career Roadmap</h1>
-    <p>A realistic guide to MBA specializations, skills, careers, and outcomes</p>
+    <p>A practical guide to MBA specializations, skills, careers & growth</p>
   </header>
 
-  <!-- INTRO -->
   <section class="course">
-    <h2>What an MBA Really Is</h2>
+    <h2>What is an MBA?</h2>
     <p>
-      MBA is not a guarantee of success. It is a force multiplier.
-      If you enter with clarity and build skills, it accelerates growth.
-      If you enter blindly, it becomes an expensive delay.
+      MBA (Master of Business Administration) builds leadership, strategy,
+      business decision-making, and management skills. It is ideal for students
+      aiming for corporate leadership, consulting, startups, or high-growth roles.
     </p>
   </section>
 
-  <!-- ROADMAP -->
   <section class="course">
-    <h2>📍 MBA Roadmap</h2>
+    <h2>Popular MBA Specializations</h2>
     <ul>
-      <li><strong>Before MBA:</strong> Career clarity, entrance prep, basic skills</li>
-      <li><strong>Year 1:</strong> Core subjects + case studies + internships</li>
-      <li><strong>Year 2:</strong> Specialization + live projects + placements</li>
-      <li><strong>After MBA:</strong> Entry-level managerial or specialist roles</li>
+      <li><strong>MBA Finance</strong> – Corporate finance, investment banking, FP&A</li>
+      <li><strong>MBA Marketing</strong> – Brand management, digital marketing, growth</li>
+      <li><strong>MBA HR</strong> – Talent management, HR analytics, leadership</li>
+      <li><strong>MBA Operations</strong> – Supply chain, logistics, process optimization</li>
+      <li><strong>MBA Business Analytics</strong> – Data-driven decision making</li>
     </ul>
   </section>
 
-  <!-- SPECIALIZATIONS -->
   <section class="course">
-    <h2>🎯 Popular MBA Specializations</h2>
+    <h2>Roadmap During MBA (Step-by-Step)</h2>
+    <ol>
+      <li>Build strong fundamentals in finance, marketing & strategy</li>
+      <li>Choose specialization by end of first year</li>
+      <li>Do internships & live projects (non-negotiable)</li>
+      <li>Build Excel, PowerPoint & data skills</li>
+      <li>Network with seniors, alumni & industry professionals</li>
+      <li>Prepare for placements from Day 1</li>
+    </ol>
+  </section>
+
+  <section class="course">
+    <h2>High-Impact Skills to Learn (This Makes You Stand Out)</h2>
     <ul>
-      <li>MBA Finance</li>
-      <li>MBA Marketing</li>
-      <li>MBA Human Resources (HR)</li>
-      <li>MBA Operations</li>
-      <li>MBA Business Analytics</li>
+      <li>Advanced Excel & Financial Modeling</li>
+      <li>PowerPoint (consulting-level slides)</li>
+      <li>Business Communication & Storytelling</li>
+      <li>Data Analysis (basic SQL / Power BI / Tableau)</li>
+      <li>Negotiation & Leadership</li>
+      <li>AI tools for productivity (ChatGPT, automation tools)</li>
     </ul>
   </section>
 
-  <!-- SKILLS SECTION -->
   <section class="course">
-    <h2>🧠 Skills You MUST Learn During MBA</h2>
-
-    <h3>1. Core Business Skills</h3>
+    <h2>Job Roles After MBA</h2>
     <ul>
-      <li>Business communication</li>
-      <li>Presentation & storytelling</li>
-      <li>Problem-solving & decision-making</li>
-      <li>Teamwork & leadership</li>
-    </ul>
-
-    <h3>2. Technical & Tool-Based Skills</h3>
-    <ul>
-      <li>Advanced Excel</li>
-      <li>Power BI / Tableau</li>
-      <li>Basic SQL</li>
-      <li>Financial modeling (for Finance)</li>
-      <li>Digital marketing tools (for Marketing)</li>
-    </ul>
-
-    <h3>3. Career-Defining Skills</h3>
-    <ul>
-      <li>Networking & personal branding</li>
-      <li>Negotiation skills</li>
-      <li>Time & stress management</li>
-      <li>Learning how to learn fast</li>
+      <li>Management Consultant</li>
+      <li>Investment Banking Analyst</li>
+      <li>Product Manager</li>
+      <li>Marketing Manager / Growth Manager</li>
+      <li>HR Business Partner</li>
+      <li>Operations Manager</li>
     </ul>
   </section>
 
-  <!-- CAREERS -->
   <section class="course">
-    <h2>💼 Career Options After MBA</h2>
+    <h2>Salary Expectations (India)</h2>
     <ul>
-      <li>Management Trainee</li>
-      <li>Business / Data Analyst</li>
-      <li>Marketing Manager / Brand Executive</li>
-      <li>Financial Analyst / Corporate Finance</li>
-      <li>HR Manager / Talent Partner</li>
-      <li>Consultant / Strategy Analyst</li>
+      <li>Tier 1 MBA colleges: ₹15–30 LPA</li>
+      <li>Tier 2 colleges: ₹7–15 LPA</li>
+      <li>Tier 3 colleges: ₹4–7 LPA</li>
     </ul>
+    <p><em>Salaries grow rapidly with skills, switches, and performance.</em></p>
   </section>
 
-  <!-- SALARY -->
   <section class="course">
-    <h2>💰 Salary Reality (India)</h2>
-    <ul>
-      <li>Top colleges (IIMs, elite B-schools): ₹15–30 LPA</li>
-      <li>Mid-tier colleges: ₹6–12 LPA</li>
-      <li>Average colleges: ₹3–6 LPA</li>
-    </ul>
-    <p>
-      Long-term growth depends on skills, not just the MBA tag.
-    </p>
-  </section>
-
-  <!-- FREE RESOURCES -->
-  <section class="course">
-    <h2>📚 Free Resources for MBA Students</h2>
+    <h2>Free Resources (High Quality)</h2>
     <ul>
       <li>
-        <a href="https://nptel.ac.in/courses" target="_blank">
-          NPTEL – Management & Business Courses
+        Excel & Finance – 
+        <a href="https://learn.microsoft.com/en-us/training/" target="_blank">
+          Microsoft Learn
         </a>
       </li>
       <li>
-        <a href="https://www.coursera.org/browse/business" target="_blank">
-          Coursera Business Courses (Audit for Free)
+        Business & Strategy – 
+        <a href="https://www.coursera.org" target="_blank">
+          Coursera (Free audit)
         </a>
       </li>
       <li>
-        <a href="https://www.youtube.com/results?search_query=mba+case+study+analysis" target="_blank">
-          MBA Case Studies (YouTube)
+        Consulting & Case Prep – 
+        <a href="https://www.youtube.com/@FirmLearning" target="_blank">
+          Firm Learning (YouTube)
         </a>
       </li>
     </ul>
   </section>
 
-  <!-- MISTAKES -->
   <section class="course">
-    <h2>⚠️ Common MBA Mistakes</h2>
+    <h2>Common Mistakes MBA Students Make</h2>
     <ul>
-      <li>Doing MBA without clarity</li>
-      <li>Ignoring internships and projects</li>
-      <li>Depending only on placements</li>
-      <li>Not building skills outside class</li>
+      <li>Choosing specialization without research</li>
+      <li>Ignoring internships & live projects</li>
+      <li>Focusing only on grades, not skills</li>
+      <li>Poor networking</li>
+      <li>Late placement preparation</li>
     </ul>
   </section>
 
-  <!-- DECISION -->
-  <section class="course">
-    <h2>🤔 Should You Do an MBA?</h2>
-
-    <p><strong>Yes, if:</strong></p>
-    <ul>
-      <li>You want leadership or managerial roles</li>
-      <li>You are ready for competition</li>
-      <li>You will actively build skills</li>
-    </ul>
-
-    <p><strong>No, if:</strong></p>
-    <ul>
-      <li>You expect instant success</li>
-      <li>You are doing it under pressure</li>
-      <li>You dislike ambiguity and responsibility</li>
-    </ul>
-  </section>
-
-  <!-- FOOTER -->
   <footer>
-    <p>Built for commerce students | Practical, honest & student-first</p>
+    <p>Built to guide commerce students toward clarity & growth</p>
   </footer>
 
 </body>
