--- a/ca.html
+++ b/ca.html
@@ -14,7 +14,7 @@
   <a href="mba.html">MBA</a>
   <a href="about.html">About</a>
 </nav>
-<section class="roadmap">
+<section class="course">
   <h1>CA (Chartered Accountant) Career Roadmap</h1>
   <p>
     CA is one of the most demanding professional courses in commerce.
