--- a/bcom.html
+++ b/bcom.html
@@ -3,116 +3,166 @@
 <head>
   <meta charset="UTF-8">
   <title>B.Com Roadmap</title>
-  <meta name="description" content="B.Com roadmap covering skills, jobs, salaries and future options.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Complete B.Com roadmap with skills, free resources, and career guidance for commerce students.">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<body>
-
+  <!-- NAVBAR -->
   <nav class="navbar">
     <a href="index.html">Home</a>
+    <a href="about.html">About</a>
     <a href="bcom.html">B.Com</a>
     <a href="ca.html">CA</a>
-    <a href="mba.html">MBA</a>
   </nav>
 
-  <header class="hero">
-    <h1>B.Com Roadmap</h1>
-    <p>What to learn, what to avoid, and how to use B.Com smartly</p>
+  <!-- PAGE HEADER -->
+  <header>
+    <h1>B.Com Career Roadmap</h1>
+    <p>A step-by-step guide to skills, careers, and smart choices during B.Com.</p>
   </header>
 
+  <!-- WHO IS THIS FOR -->
   <section class="course">
-    <h2>Year 1 – Build Foundations</h2>
+    <h2>Who Should Choose B.Com?</h2>
     <ul>
-      <li>Financial Accounting basics</li>
-      <li>Business Economics</li>
-      <li>Basic Excel (formulas, charts)</li>
-      <li>Communication & presentation skills</li>
+      <li>Students interested in accounting, finance, or business</li>
+      <li>Those planning CA, MBA, or finance-related careers</li>
+      <li>Students ready to build skills alongside college</li>
     </ul>
   </section>
 
+  <!-- ROADMAP -->
   <section class="course">
-    <h2>Year 2 – Skill Development</h2>
+    <h2>B.Com Roadmap (Year-wise)</h2>
+
+    <h3>Year 1 – Foundation</h3>
     <ul>
-      <li>Corporate Accounting</li>
-      <li>GST fundamentals</li>
-      <li>Advanced Excel (Pivot Tables, Lookups)</li>
-      <li>Internships & practical exposure</li>
+      <li>Accounting fundamentals</li>
+      <li>Business economics & law</li>
+      <li>Basic Excel</li>
+    </ul>
+
+    <h3>Year 2 – Skill Building</h3>
+    <ul>
+      <li>Advanced Excel & financial analysis</li>
+      <li>GST & taxation basics</li>
+      <li>Internships (even unpaid)</li>
+    </ul>
+
+    <h3>Year 3 – Career Direction</h3>
+    <ul>
+      <li>Decide: CA / MBA / Job / Certifications</li>
+      <li>Build projects & resume</li>
+      <li>Prepare for placements or exams</li>
     </ul>
   </section>
 
+  <!-- FREE RESOURCES -->
   <section class="course">
-    <h2>Year 3 – Career Direction</h2>
+    <h2>Best Free Resources</h2>
     <ul>
-      <li>Income Tax basics</li>
-      <li>Financial analysis & reporting</li>
-      <li>Decide next step: CA / MBA / Job</li>
-      <li>Resume + interview preparation</li>
+      <li>YouTube channels for accounting & finance</li>
+      <li>Microsoft Learn for Excel</li>
+      <li>Investopedia for finance concepts</li>
     </ul>
   </section>
 
-  <section class="course">
-    <h2>Career Options After B.Com</h2>
-    <ul>
-      <li>Accounts Executive — ₹3–6 LPA</li>
-      <li>Junior Accountant — ₹3–5 LPA</li>
-      <li>Business Analyst (with skills) — ₹5–8 LPA</li>
-      <li>Higher studies: CA, CMA, CS, MBA</li>
-    </ul>
-  </section>
-
-  <section class="course">
-    <h2>Skills That Multiply B.Com Value</h2>
-    <ul>
-      <li>Excel & data handling</li>
-      <li>Accounting software (Tally / ERP basics)</li>
-      <li>Professional communication</li>
-      <li>Basic financial modeling</li>
-    </ul>
-  </section>
-
-  <section class="course">
-    <h2>Free Learning Resources</h2>
-    <ul>
-      <li>
-        Excel & Business Tools –
-        <a href="https://learn.microsoft.com/en-us/training/" target="_blank">
-          Microsoft Learn
-        </a>
-      </li>
-      <li>
-        Accounting & Finance –
-        <a href="https://www.khanacademy.org/economics-finance-domain" target="_blank">
-          Khan Academy
-        </a>
-      </li>
-      <li>
-        Commerce Concepts –
-        <a href="https://www.youtube.com/@CA_Rachana_Phade" target="_blank">
-          CA Rachana Phade (YouTube)
-        </a>
-      </li>
-    </ul>
-  </section>
-
+  <!-- COMMON MISTAKES -->
   <section class="course">
     <h2>Common Mistakes to Avoid</h2>
     <ul>
-      <li>Relying only on college syllabus</li>
-      <li>Ignoring Excel & practical skills</li>
-      <li>Delaying career decisions till final year</li>
-      <li>Copying others without clarity</li>
+      <li>Only studying college syllabus</li>
+      <li>Ignoring practical skills like Excel</li>
+      <li>Thinking about career only in final year</li>
     </ul>
   </section>
+  <section class="course">
+  <h2>Must-Learn Skills During B.Com</h2>
+  <ul>
+    <li>Advanced Excel (Pivot tables, VLOOKUP, dashboards)</li>
+    <li>Basic Accounting Software (Tally / Busy)</li>
+    <li>Financial Statement Analysis</li>
+    <li>GST & Income Tax basics</li>
+    <li>Business Communication</li>
+    <li>Basic Data Analysis (optional but powerful)</li>
+  </ul>
+</section>
+<section class="course">
+  <h2>Career Options After B.Com</h2>
+  <ul>
+    <li>Accounts Executive</li>
+    <li>Junior Accountant</li>
+    <li>Tax Assistant</li>
+    <li>Banking & Insurance roles</li>
+    <li>Business Analyst (with extra skills)</li>
+    <li>Preparation for CA / CMA / MBA / CFA</li>
+  </ul>
+</section>
+<section class="course">
+  <h2>Estimated Salary After B.Com (India)</h2>
+  <ul>
+    <li>Fresh Graduate: ₹2 – ₹4 LPA</li>
+    <li>With Excel + Accounting Software: ₹4 – ₹6 LPA</li>
+    <li>With CA/MBA/CFA progress: ₹6 – ₹10+ LPA</li>
+  </ul>
+  <p><strong>Note:</strong> Salary depends more on skills than degree.</p>
+</section>
+<section class="course">
+  <h2>Free Learning Resources</h2>
+  <ul>
+    <li>
+      Accounting Basics – 
+      <a href="https://www.youtube.com/@AccountingStuff" target="_blank">
+        Accounting Stuff (YouTube)
+      </a>
+    </li>
 
+    <li>
+      Excel for Finance – 
+      <a href="https://learn.microsoft.com/en-us/training/excel/" target="_blank">
+        Microsoft Learn Excel
+      </a>
+    </li>
+
+    <li>
+      Finance Concepts – 
+      <a href="https://www.investopedia.com" target="_blank">
+        Investopedia
+      </a>
+    </li>
+
+    <li>
+      GST & Tax Basics – 
+      <a href="https://www.youtube.com/@CAClubIndia" target="_blank">
+        CAclubindia (YouTube)
+      </a>
+    </li>
+  </ul>
+</section>
+<section class="course">
+  <h2>Long-Term Benefits of B.Com</h2>
+  <ul>
+    <li>Strong base for CA, MBA, CMA, CFA</li>
+    <li>Understanding of business & money</li>
+    <li>Flexibility to shift into finance, analytics, or management</li>
+    <li>Early earning opportunities through internships</li>
+  </ul>
+</section>
+<section class="course">
+  <h2>What Most B.Com Students Do Wrong</h2>
+  <ul>
+    <li>Only depending on college syllabus</li>
+    <li>Ignoring internships</li>
+    <li>Postponing career decisions till final year</li>
+    <li>Believing degree alone guarantees success</li>
+  </ul>
+</section>
+
+  <!-- FOOTER -->
   <footer>
-    <p>Designed to give commerce students clarity, not confusion.</p>
+    <p>Built for commerce students</p>
   </footer>
-
-</body>
-
 
 </body>
 </html>
