--- a/bcom.html
+++ b/bcom.html
@@ -98,14 +98,25 @@
     <li>Business Analyst (with extra skills)</li>
     <li>Preparation for CA / CMA / MBA / CFA</li>
   </ul>
+  <h2>📈 Future Growth After B.Com</h2>
+<p>
+B.Com alone usually offers limited growth. Real career acceleration happens when B.Com is combined with
+professional courses or in-demand skills.
+</p>
+
+<ul>
+  <li>B.Com + MBA → Management & leadership roles</li>
+  <li>B.Com + CA / CMA → High-paying finance roles</li>
+  <li>B.Com + Data / Finance skills → Corporate & analyst roles</li>
+</ul>
 </section>
 <section class="course">
-  <h2>Estimated Salary After B.Com (India)</h2>
-  <ul>
-    <li>Fresh Graduate: ₹2 – ₹4 LPA</li>
-    <li>With Excel + Accounting Software: ₹4 – ₹6 LPA</li>
-    <li>With CA/MBA/CFA progress: ₹6 – ₹10+ LPA</li>
-  </ul>
+  <h2>💰 Salary Progression (Reality)</h2>
+<ul>
+  <li>Fresh Graduate: ₹2–4 LPA</li>
+  <li>With 2–3 years experience + skills: ₹5–8 LPA</li>
+  <li>With MBA / CA / specialization: ₹10+ LPA</li>
+</ul>
   <p><strong>Note:</strong> Salary depends more on skills than degree.</p>
 </section>
 <section class="course">
@@ -119,11 +130,20 @@
     </li>
 
     <li>
-      Excel for Finance – 
-      <a href="https://learn.microsoft.com/en-us/training/excel/" target="_blank">
-        Microsoft Learn Excel
-      </a>
-    </li>
+  <a href="https://learn.microsoft.com/en-us/training/browse/?products=excel" target="_blank">
+    Microsoft Learn – Excel Training (Official)
+  </a>
+</li>
+    <li>
+  <a href="https://www.youtube.com/results?search_query=excel+for+beginners" target="_blank">
+    Excel for Beginners – Free YouTube Tutorials
+  </a>
+</li>
+<li>
+  <a href="https://www.youtube.com/@LeilaGharani" target="_blank">
+    Leila Gharani – Excel & Data Skills (YouTube)
+  </a>
+</li>
 
     <li>
       Finance Concepts – 
@@ -158,6 +178,21 @@
     <li>Believing degree alone guarantees success</li>
   </ul>
 </section>
+  <h2>🤔 Should You Choose B.Com?</h2>
+
+<p><strong>Choose B.Com if:</strong></p>
+<ul>
+  <li>You are interested in finance, accounting, or business</li>
+  <li>You plan to pursue MBA, CA, CMA, or similar paths</li>
+  <li>You are willing to build skills alongside college</li>
+</ul>
+
+<p><strong>Avoid B.Com if:</strong></p>
+<ul>
+  <li>You want quick money with minimal effort</li>
+  <li>You dislike numbers, analysis, or structured work</li>
+  <li>You don’t plan further specialization</li>
+</ul>
 
   <!-- FOOTER -->
   <footer>
