--- a/ca.html
+++ b/ca.html
@@ -15,7 +15,7 @@
   <a href="about.html">About</a>
 </nav>
   
-<section class="roadmap">
+<section class="course">
   <h1>CA (Chartered Accountant) Career Roadmap</h1>
   <p>
     CA is one of the most demanding professional courses in commerce.
