--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <a href="bcom.html">B.Com</a>
   <a href="ca.html">CA</a>
   <a href="mba.html">MBA</a>
+  <a href="bba.html">BBA</a>
+  <a href="cs.html">CS</a>
+  <a href="cma.html">CMA</a>
   <a href="skills.html">Skills</a>
 </nav>
 
