--- a/ca.html
+++ b/ca.html
@@ -12,7 +12,10 @@
   <a href="bcom.html">B.Com</a>
   <a href="ca.html">CA</a>
   <a href="mba.html">MBA</a>
-  <a href="about.html">About</a>
+  <a href="bba.html">BBA</a>
+  <a href="cs.html">CS</a>
+  <a href="cma.html">CMA</a>
+  <a href="skills.html">Skills</a>
 </nav>
   
 <section class="course">
