--- a/mba.html
+++ b/mba.html
@@ -10,12 +10,15 @@
 <body>
 
   <nav class="navbar">
-    <a href="index.html">Home</a>
-    <a href="bcom.html">B.Com</a>
-    <a href="ca.html">CA</a>
-    <a href="mba.html">MBA</a>
-    <a href="about.html">About</a>
-  </nav>
+  <a href="index.html">Home</a>
+  <a href="bcom.html">B.Com</a>
+  <a href="ca.html">CA</a>
+  <a href="mba.html">MBA</a>
+  <a href="bba.html">BBA</a>
+  <a href="cs.html">CS</a>
+  <a href="cma.html">CMA</a>
+  <a href="skills.html">Skills</a>
+</nav>
 
   <header>
     <h1>MBA Career Roadmap</h1>
