--- a/skills.html
+++ b/skills.html
@@ -10,11 +10,14 @@
 
 <body>
 
-<nav class="navbar">
+  <nav class="navbar">
   <a href="index.html">Home</a>
   <a href="bcom.html">B.Com</a>
   <a href="ca.html">CA</a>
   <a href="mba.html">MBA</a>
+  <a href="bba.html">BBA</a>
+  <a href="cs.html">CS</a>
+  <a href="cma.html">CMA</a>
   <a href="skills.html">Skills</a>
 </nav>
 
