--- a/index.html
+++ b/index.html
@@ -21,52 +21,63 @@
 </nav>
 
 <header>
-  <h1>Commerce Career Roadmap</h1>
-  <p>Clear guidance for commerce students on courses, skills, and career paths</p>
+  <h1>Career Roadmaps for Commerce Students</h1>
+  <p>Clear paths. Real skills. No confusion.</p>
 </header>
 
 <section class="course">
-  <h2>What is this website?</h2>
-  <p>
-    This website is built for commerce students who feel confused about
-    which course to choose, what skills actually matter, and how to build
-    a strong career step by step.
-  </p>
-</section>
-
-<section class="course">
-  <h2>Explore Commerce Career Paths</h2>
+  <h2>Who Is This Website For?</h2>
   <ul>
-    <li><a href="bcom.html">B.Com — Career options, skills & roadmap</a></li>
-    <li><a href="ca.html">CA — Complete exam & career roadmap</a></li>
-    <li><a href="mba.html">MBA — Specializations, skills & outcomes</a></li>
+    <li>Commerce students confused about careers</li>
+    <li>Students choosing between B.Com, BBA, CA, MBA, CS, CMA</li>
+    <li>Those who want skills, not just degrees</li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>Why Skills Matter More Than Degrees</h2>
-  <p>
-    Degrees alone are not enough. Skills like Excel, communication,
-    financial understanding, and analytical thinking decide your growth.
-  </p>
-  <p>
-    Learn the most important commerce skills here:
-    <a href="skills.html">Commerce Skills Roadmap</a>
-  </p>
+  <h2>Explore Career Paths</h2>
+  <ul>
+    <li><a href="bcom.html">📘 B.Com – Accounting, finance & flexible careers</a></li>
+    <li><a href="bba.html">📊 BBA – Management & leadership foundation</a></li>
+    <li><a href="ca.html">📚 CA – High-risk, high-reward finance career</a></li>
+    <li><a href="cs.html">⚖️ CS – Corporate law & compliance</a></li>
+    <li><a href="cma.html">📈 CMA – Costing, strategy & decision-making</a></li>
+    <li><a href="mba.html">🎓 MBA – Career acceleration & leadership</a></li>
+  </ul>
 </section>
 
 <section class="course">
-  <h2>Who Should Use This Site?</h2>
+  <h2>What Makes This Site Different?</h2>
   <ul>
-    <li>Class 11–12 commerce students</li>
-    <li>B.Com / CA / MBA aspirants</li>
-    <li>Students confused about career direction</li>
+    <li>No sugarcoating about salaries or difficulty</li>
+    <li>Skill-focused, not degree-worship</li>
+    <li>Built specifically for Indian commerce students</li>
+    <li>Step-by-step roadmaps, not generic advice</li>
   </ul>
+</section>
+
+<section class="course">
+  <h2>How to Use This Website</h2>
+  <ol>
+    <li>Start with your current course (B.Com / BBA)</li>
+    <li>Explore 2–3 future paths (CA, MBA, CS, CMA)</li>
+    <li>Note required skills & effort level</li>
+    <li>Decide early and prepare strategically</li>
+  </ol>
+</section>
+
+<section class="course">
+  <h2>Reality Check</h2>
+  <p>
+    Degrees don’t create careers. Skills + decisions do.
+    Most students realise this too late. This website exists so you don’t.
+  </p>
 </section>
 
 <footer>
-  <p>Built to guide commerce students with clarity, not confusion.</p>
+  <p>Built for students who want clarity, not confusion.</p>
 </footer>
 
 </body>
+
 </html>
