--- a/index.html
+++ b/index.html
@@ -36,14 +36,46 @@
 
 <section class="course">
   <h2>Explore Career Paths</h2>
-  <ul>
-    <li><a href="bcom.html">📘 B.Com – Accounting, finance & flexible careers</a></li>
-    <li><a href="bba.html">📊 BBA – Management & leadership foundation</a></li>
-    <li><a href="ca.html">📚 CA – High-risk, high-reward finance career</a></li>
-    <li><a href="cs.html">⚖️ CS – Corporate law & compliance</a></li>
-    <li><a href="cma.html">📈 CMA – Costing, strategy & decision-making</a></li>
-    <li><a href="mba.html">🎓 MBA – Career acceleration & leadership</a></li>
-  </ul>
+
+  <div class="career-grid">
+
+    <div class="career-card">
+      <h3>B.Com</h3>
+      <p>Flexible degree for accounting, finance & future specialisation.</p>
+      <a href="bcom.html">View Roadmap →</a>
+    </div>
+
+    <div class="career-card">
+      <h3>BBA</h3>
+      <p>Management-focused path for leadership & business roles.</p>
+      <a href="bba.html">View Roadmap →</a>
+    </div>
+
+    <div class="career-card">
+      <h3>CA</h3>
+      <p>Elite finance career with high difficulty and high reward.</p>
+      <a href="ca.html">View Roadmap →</a>
+    </div>
+
+    <div class="career-card">
+      <h3>CS</h3>
+      <p>Corporate law, governance & compliance specialist.</p>
+      <a href="cs.html">View Roadmap →</a>
+    </div>
+
+    <div class="career-card">
+      <h3>CMA</h3>
+      <p>Costing, strategy & performance management expert.</p>
+      <a href="cma.html">View Roadmap →</a>
+    </div>
+
+    <div class="career-card">
+      <h3>MBA</h3>
+      <p>Career acceleration into leadership & high-growth roles.</p>
+      <a href="mba.html">View Roadmap →</a>
+    </div>
+
+  </div>
 </section>
 
 <section class="course">
