--- a/ca.html
+++ b/ca.html
@@ -16,6 +16,7 @@
   <a href="cs.html">CS</a>
   <a href="cma.html">CMA</a>
   <a href="skills.html">Skills</a>
+  <a href="compare.html">Compare</a>
 </nav>
   
 <section class="course">
