--- a/bba.html
+++ b/bba.html
@@ -18,6 +18,7 @@
   <a href="cs.html">CS</a>
   <a href="cma.html">CMA</a>
   <a href="skills.html">Skills</a>
+  <a href="compare.html">Compare</a>
 </nav>
 
 <header>
