--- a/compare.html
+++ b/compare.html
@@ -28,7 +28,7 @@
 <section class="course">
   <h2>Career Comparison Overview</h2>
 
-  <table border="1" cellpadding="10" cellspacing="0" width="100%">
+  <table class="compare-table">
     <tr>
       <th>Course</th>
       <th>Difficulty</th>
