--- a/compare.html
+++ b/compare.html
@@ -87,6 +87,50 @@
 
   </table>
 </section>
+  <section class="course">
+  <h2>Who Should Choose What?</h2>
+
+  <h3>Choose B.Com if:</h3>
+  <ul>
+    <li>You want flexibility and time to explore</li>
+    <li>You plan CA, MBA, CFA, or analytics later</li>
+    <li>You want lower pressure early on</li>
+  </ul>
+
+  <h3>Choose BBA if:</h3>
+  <ul>
+    <li>You want management exposure early</li>
+    <li>You aim for MBA from a good college</li>
+    <li>You’re interested in leadership roles</li>
+  </ul>
+
+  <h3>Choose CA if:</h3>
+  <ul>
+    <li>You can handle long-term pressure</li>
+    <li>You want top-tier finance credibility</li>
+    <li>You’re disciplined and consistent</li>
+  </ul>
+
+  <h3>Choose CS if:</h3>
+  <ul>
+    <li>You’re interested in law & corporate governance</li>
+    <li>You want boardroom-level roles</li>
+    <li>You prefer theory + compliance work</li>
+  </ul>
+
+  <h3>Choose CMA if:</h3>
+  <ul>
+    <li>You like strategy, costing & performance analysis</li>
+    <li>You want roles inside companies (not audit-heavy)</li>
+  </ul>
+
+  <h3>Choose MBA if:</h3>
+  <ul>
+    <li>You’re ready to invest time & money</li>
+    <li>You aim for leadership or fast growth</li>
+    <li>You can get into a decent college</li>
+  </ul>
+</section>
 
 <section class="course">
   <h2>Important Truths</h2>
