--- a/skills.html
+++ b/skills.html
@@ -23,73 +23,86 @@
 </nav>
 
 <header>
-  <h1>Commerce Skills Roadmap</h1>
-  <p>Skills that actually decide your career growth — not just degrees</p>
+  <h1>Essential Skills for Commerce Students</h1>
+  <p>Degrees open doors. Skills decide how far you go.</p>
 </header>
 
 <section class="course">
-  <h2>Core Skills Every Commerce Student Must Learn</h2>
+  <h2>1️⃣ Core Commerce Skills</h2>
   <ul>
-    <li>Excel & Google Sheets (absolute must)</li>
-    <li>Basic accounting & financial understanding</li>
-    <li>Communication & presentation skills</li>
-    <li>Analytical thinking & problem solving</li>
-    <li>Professional email & workplace etiquette</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>Technical & Career-Boosting Skills</h2>
-  <ul>
-    <li>Financial analysis & interpretation</li>
-    <li>Basic data analysis (Excel + charts)</li>
+    <li>Accounting fundamentals</li>
+    <li>Financial statement analysis</li>
+    <li>Basic taxation (GST & Income Tax)</li>
     <li>Understanding business models</li>
-    <li>Tax basics & compliance awareness</li>
-    <li>AI tools for productivity (research, notes, planning)</li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>Skills by Career Stage</h2>
-  <ol>
-    <li><strong>College Level:</strong> Excel, communication, basics of finance</li>
-    <li><strong>Professional Course Stage:</strong> Analytical thinking, subject depth</li>
-    <li><strong>Early Career:</strong> Decision-making, presentation, confidence</li>
-  </ol>
+  <h2>2️⃣ Tools & Software</h2>
+  <ul>
+    <li>Excel (advanced formulas, dashboards)</li>
+    <li>Tally / accounting software</li>
+    <li>PowerPoint (business presentations)</li>
+    <li>Basic SQL or data tools (optional edge)</li>
+  </ul>
 </section>
 
 <section class="course">
-  <h2>Free Learning Resources</h2>
+  <h2>3️⃣ Communication & Professional Mindset</h2>
+  <ul>
+    <li>Email & corporate communication</li>
+    <li>Presentation & speaking skills</li>
+    <li>Time management & discipline</li>
+    <li>Professional ethics</li>
+  </ul>
+</section>
+
+<section class="course">
+  <h2>4️⃣ AI & Future-Proof Skills</h2>
+  <ul>
+    <li>Using AI tools for research & analysis</li>
+    <li>Data interpretation</li>
+    <li>Understanding automation in finance</li>
+    <li>Continuous learning mindset</li>
+  </ul>
+</section>
+
+<section class="course">
+  <h2>5️⃣ Free Learning Resources</h2>
   <ul>
     <li>
-      Excel Basics —
-      <a href="https://learn.microsoft.com/en-us/training/paths/get-started-excel/" target="_blank">
-        Microsoft Learn
+      Excel & Data Skills – 
+      <a href="https://www.youtube.com/@LeilaGharani" target="_blank">
+        Leila Gharani
       </a>
     </li>
     <li>
-      Accounting Basics —
-      <a href="https://www.khanacademy.org/economics-finance-domain/core-finance" target="_blank">
-        Khan Academy
+      Accounting Basics – 
+      <a href="https://www.youtube.com/@AccountingStuff" target="_blank">
+        Accounting Stuff
       </a>
     </li>
     <li>
-      Communication Skills —
-      <a href="https://www.coursera.org/courses?query=communication%20skills" target="_blank">
-        Coursera (Free options)
+      Finance Concepts – 
+      <a href="https://www.investopedia.com" target="_blank">
+        Investopedia
+      </a>
+    </li>
+    <li>
+      AI Basics – 
+      <a href="https://www.youtube.com/@SimplilearnOfficial" target="_blank">
+        Simplilearn
       </a>
     </li>
   </ul>
 </section>
 
 <section class="course">
-  <h2>Common Mistakes Students Make</h2>
-  <ul>
-    <li>Chasing degrees without skills</li>
-    <li>Ignoring Excel and practical tools</li>
-    <li>Waiting until final year to upskill</li>
-    <li>Copying others without self-assessment</li>
-  </ul>
+  <h2>Reality Check</h2>
+  <p>
+    Students who combine <strong>degree + skills</strong> grow faster, earn more,
+    and face less career regret than those who rely on degrees alone.
+  </p>
 </section>
 
 <footer>
